# Upwork-volna-bot

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-01-upwork-lead-bot.md  2026-07-05-admin-menu.md
docs/superpowers/specs/: 2026-07-05-admin-menu-design.md  2026-07-07-gmail-job-source-design.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_pub_date_timezone.py  0003_resume_pdf_bytes.py  0004_job_skill_gaps.py  0005_gmail_source.py  0006_local_qualifier.py  0007_drop_ai_qualified.py  0008_multiuser.py
src/upwork_bot/: app.py  config.py  estimator.py  pdf_utils.py
src/upwork_bot/bot/: keyboards.py  main.py  states.py
src/upwork_bot/bot/handlers/: feeds.py  jobs.py  menu.py  portfolio.py  proposal_examples.py  proposals.py  resume.py
src/upwork_bot/bot/middlewares/: admin_only.py  owner_only.py  (+1 more)
src/upwork_bot/db/: base.py  models.py  repo.py
src/upwork_bot/gmail/: client.py  poller.py
src/upwork_bot/llm/: analysis_chain.py  embeddings.py  proposal_chain.py
src/upwork_bot/rss/: client.py  poller.py
tests/: test_admin_only.py  test_analysis_chain.py  test_config.py  test_estimator.py  test_examples_handlers.py  test_feeds_handlers.py  test_gmail_client.py  test_gmail_poller.py  test_jobs_notify.py  test_keyboards.py  test_models.py  test_owner_only.py  test_poller.py  test_portfolio_handlers.py  test_proposal_chain.py  test_registered_user.py  test_repo.py  test_resume_handlers.py  test_rss_client.py
tests/fixtures/: vollna_hourly.eml
